Thu Apr 29 23:46:09 GMT 2010  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.cc: Check is SA_SIGINFO is defined before
	  using it as it isn't available everywhere.  Fixes FTBFS on GNU Hurd.

Thu Apr 29 12:11:48 GMT 2010  Olly Betts <olly@survex.com>

	* configure.ac: Install headers under PREFIX/include not
	  PREFIX/include/xapian.  This broke compiling code which didn't use
	  XO_LIB_XAPIAN or xapian-config.

Wed Apr 28 12:05:23 GMT 2010  Olly Betts <olly@survex.com>

	* Makefile.am,m4-macros/xapian-1.1.m4: Remove -1.1 suffix from
	  xapian-1.1.m4 and libxapian-1.1.la.

Wed Apr 28 06:15:45 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS: Sync with 1.0.20.
	* NEWS,configure.ac: 1.2.0!

Tue Apr 27 12:45:29 GMT 2010  Olly Betts <olly@survex.com>

	* AUTHORS: Add bug reporter.

Mon Apr 26 08:26:26 GMT 2010  Olly Betts <olly@survex.com>

	* common/getopt.cc,common/gnu_getopt.h: On Cygwin, #include <getopt.h>
	  for declarations of optind, etc rather than providing our own
	  declarations.  Should fix warnings in Cygwin build reported by Reini
	  Urban on xapian-devel list.

Mon Apr 26 06:27:07 GMT 2010  Olly Betts <olly@survex.com>

	* common/getopt.cc,common/gnu_getopt.h: Revert previous 2
	  getopt-related patches.  The latest state was breaking on Solaris
	  which (contrary to what its man pages say) prototypes getopt() stuff
	  in stdlib.h.  This seems to be a rabbit hole we don't want to head
	  further down.

Sat Apr 24 02:12:53 GMT 2010  Olly Betts <olly@survex.com>

	* examples/delve.cc: Update --help output for -v to cover all terms
	  case.

Sat Apr 24 01:58:00 GMT 2010  Olly Betts <olly@survex.com>

	* examples/delve.cc: Add -a option to list all terms in a database.

Sat Apr 24 01:51:01 GMT 2010  Olly Betts <olly@survex.com>

	* examples/copydatabase.cc: Prefer string() to "" converted to string.

Thu Apr 22 14:21:30 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Fix bug related to ticket#464 (the previous