@@ -174,7 +174,7 @@ static void * sigaddr = NULL;
 // Needs C linkage so we can pass it to sigaction()/signal() without problems.
 extern "C" {
 
-#if defined HAVE_SIGACTION && define SA_SIGINFO
+#if defined HAVE_SIGACTION && defined SA_SIGINFO
 XAPIAN_NORETURN(static void handle_sig(int signum_, siginfo_t *si, void *));
 static void handle_sig(int signum_, siginfo_t *si, void *)
 {
@@ -233,7 +233,7 @@ class SignalRedirector {
 	signum = 0;
 	sigaddr = NULL;
 	// SA_SIGINFO not universal (e.g. not present on Linux < 2.2 and Hurd).
-#if defined HAVE_SIGACTION && define SA_SIGINFO
+#if defined HAVE_SIGACTION && defined SA_SIGINFO
 	struct sigaction sa;
 	sa.sa_sigaction = handle_sig;
 	sigemptyset(&sa.sa_mask);
@@ -261,7 +261,7 @@ class SignalRedirector {
     }
     ~SignalRedirector() {
 	if (active) {
-#if defined HAVE_SIGACTION && define SA_SIGINFO
+#if defined HAVE_SIGACTION && defined SA_SIGINFO
 	    struct sigaction sa;
 	    sa.sa_handler = SIG_DFL;
 	    sigemptyset(&sa.sa_mask);
